Fix many memory leaks
This commit removes many memory leaks by freeing the allocated data
properly:

  - Only use one destructor for clients.
  - XFree allocated window hints.
  - XFree converted text properties.
  - Free the command of a KeyBinding.
  - Free the frame tree of a tag in the tag destructor if it has not
    been freed yet.

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ Changes:
     * new command: jumpto
     * use clock_get_time on systems with a mach kernel (typically Mac OS X).
       This lets herbstluftwm run on Mac systems again.
+    * fix many memory leaks.
 
 Release 0.3 on 2012-04-12
 -------------------------
