--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,7 @@ Changes:
     * use clock_get_time on systems with a mach kernel (typically Mac OS X).
       This lets herbstluftwm run on Mac systems again.
     * fix many memory leaks.
+    * new command line flag --skip-visible for use_index and move_index
 
 Release 0.3 on 2012-04-12
 -------------------------
