Autotoolify the Makefile
Let the Makefile behave more like the infamous GNU-Autotools.
Specifically, the following has changed:

- INSTALLDIR is now called DESTDIR

- PREFIX is an absolute path and not relative to DESTDIR. The reason for
  this is that DESTDIR is solely used for installing (for example by
  gentoos portage, which first install into a temporary directory),
  while PREFIX and the other variables specify final paths, that can
  also be included in the application itself or the documentation.

- PREFIX is now /usr/local instead of /usr

- SHAREDIR is now DATADIR

- MANDIR changed from $(DATADIR)/man/man1 to $(DATADIR)/man.

- There is now a MAN1DIR.

- LICENSEDIR is now set to $(DOCDIR) by default

- ETCDIR is now SYSCONFDIR

- bash completion is now installed in $(BASHCOMPLETIONDIR)

--- a/README
+++ b/README
@@ -34,17 +34,17 @@ you are creating a package for your distribution.
 The compilation and installation is configured by the following make-variables
 in config.mk:
 
-INSTALLDIR = / # the path to your root-directory
-PREFIX = $(INSTALLDIR)/usr/ # the prefix
-ETCDIR = $(INSTALLDIR)/etc/ # path to etc directory
+DESTDIR = /                     # the path to your root-directory
+PREFIX = /usr/                  # the prefix
+SYSCONFDIR = $(DESTDIR)/etc/    # path to etc directory
 
-Normally you should build it with INSTALLDIR=/ and install it with
-INSTALLDIR=./path/to/fakeroot if you are building a package.
+Normally you should build it with DESTDIR=/ and install it with
+DESTDIR=./path/to/fakeroot if you are building a package.
 
 # as user
-make INSTALLDIR=/
+make DESTDIR=/
 # as root
-make INSTALLDIR=./build/ install
+make DESTDIR=./build/ install
 # as user
 mkdir -p ~/.config/herbstluftwm/
 cp /etc/xdg/herbstluftwm/autostart ~/.config/herbstluftwm/autostart
