Make detect_monitors available on all setups
This generalizes the detect_monitor command. It tries to set the
monitors to the Xinerama monitors. On failure it falls back to one
monitor across the entire screen.

--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,7 @@ Changes:
       This lets herbstluftwm run on Mac systems again.
     * fix many memory leaks.
     * new command line flag --skip-visible for use_index and move_index
+    * new command: detect_monitors, to detect Xinerama monitors automatically
 
 Release 0.3 on 2012-04-12
 -------------------------
