--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ Changes:
     * fix many memory leaks.
     * new command line flag --skip-visible for use_index and move_index
     * new command: detect_monitors, to detect Xinerama monitors automatically
+    * new ewmh feature: react to _NET_WM_DESKTOP client messages
 
 Release 0.3 on 2012-04-12
 -------------------------
