One Makefile for herbstluftwm and herbstclient
This merges the two Makefiles for herbstluftwm and herbstclient (in the
ipc-client/ subdirectory) into one large Makefile. This also fixes the
build error for massive parallel build processes and moves the
herbstclient target from ipc-client/ to the main directory.

--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,8 @@ Changes:
     * new ewmh feature: react to _NET_WM_DESKTOP client messages
     * new command: rotate
     * new setting: auto_detect_monitors
+    * only one Makefile for herbstluftwm and herbstclient. The herbstclient
+      binary now is put in the main directory.
 
 Release 0.3 on 2012-04-12
 -------------------------
