Rename setting window_gap to frame_gap

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Next release: 0.4
 
 Changes:
 
+    * the setting window_gap is now called frame_gap
     * new command: close_or_remove
     * new flags '-' and '%' for tag_status for multi monitor handling
     * toggle default panel on hook togglehidepanel
