--- a/NEWS
+++ b/NEWS
@@ -28,6 +28,7 @@ Changes:
       binary now is put in the main directory.
     * new settings: smart_frame_surroundings and smart_window_surroundings
     * new settings: window_border_inner_color and window_border_inner_width
+    * new settings: frame_border_inner_color and frame_border_inner_width
     * new option --skip-invisible for cycle_all
 
 Release 0.3 on 2012-04-12
