New command: raise_monitor

--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ Changes:
     * only one Makefile for herbstluftwm and herbstclient. The herbstclient
       binary now is put in the main directory.
     * new settings: smart_frame_surroundings and smart_window_borders
+    * new command: raise_monitor
 
 Release 0.3 on 2012-04-12
 -------------------------
