--- a/NEWS
+++ b/NEWS
@@ -32,6 +32,8 @@ Changes:
     * new settings: frame_border_inner_color and frame_border_inner_width
     * new option --skip-invisible for cycle_all
     * cycle_layout now offers to cycle through a custom list of layouts
+    * add completion for +1 and -1 to many commands: cycle, cycle_all,
+      cycle_monitor, cycle_layout and use_index
 
 Release 0.3 on 2012-04-12
 -------------------------
