--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,7 @@ Changes:
       binary now is put in the main directory.
     * new settings: smart_frame_surroundings and smart_window_borders
     * new command: raise_monitor
+    * new setting: raise_on_focus_temporarily
 
 Release 0.3 on 2012-04-12
 -------------------------
