--- a/NEWS
+++ b/NEWS
@@ -38,6 +38,8 @@ Changes:
     * new command: raise_monitor
     * new setting: raise_on_focus_temporarily
     * start system wide autostart file if there is no working user defined one
+    * clients are restored (i.e. managed) from _NET_CLIENT_LIST even if they
+      are not visible
 
 Release 0.3 on 2012-04-12
 -------------------------
