--- a/NEWS
+++ b/NEWS
@@ -43,6 +43,7 @@ Changes:
       - new command: raise_monitor
       - new setting: raise_on_focus_temporarily
       - new command: stack
+    * new command: focus_nth
 
 Release 0.3 on 2012-04-12
 -------------------------
