--- a/NEWS
+++ b/NEWS
@@ -45,6 +45,8 @@ Changes:
       - new command: stack
     * new command: focus_nth
     * new command: bring
+    * respect the WM_TAKE_FOCUS atom, this fixes keyboard focus issues with
+      many (mostly Java/swing based) applications
 
 Release 0.3 on 2012-04-12
 -------------------------
