--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
-Next release: 0.4
------------------
+Release: 0.4 on 2012-08-18
+--------------------------
 
 Changes that requres user interaction on upgrade:
 
