--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,13 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
+Next Release: 0.5
+-----------------
+
+Changes:
+
+    * new setting: wmname
+
 Release: 0.4 on 2012-08-18
 --------------------------
 
