--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ Next Release: 0.5
 Changes:
 
     * new setting: wmname
+    * hook togglehidepanel: the default panel.sh also accepts the parameters
+      "current" or a certain monitor index
 
 Release: 0.4 on 2012-08-18
 --------------------------
