--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,8 @@ Changes:
       top of the stacking order
     * chaining of commands now is possible with the new command: chain
     * new commands: and or
+    * set the urgent flag on _NET_WM_STATE_DEMANDS_ATTENTION
+    * clear the urgent flag on window focus
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
