--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,8 @@ Changes:
       "current" or a certain monitor index
     * align captions of the tree output (commands: layout, stack) better by
       inserting a space in front of every caption
+    * chaining of commands now is possible with the new command: chain
+    * new commands: and or
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
