--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,7 @@ Changes:
       control, wether tag switching operations for a monitor are allowed.
     * set the urgent flag on _NET_WM_STATE_DEMANDS_ATTENTION
     * clear the urgent flag on window focus
+    * new command: list_padding
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
