--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,7 @@ Changes:
     * set the urgent flag on _NET_WM_STATE_DEMANDS_ATTENTION
     * clear the urgent flag on window focus
     * new command: list_padding
+    * new commands: getenv/setenv/unsetenv
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
