New rule: ewmhnotify
This rule controls whether a client may know it was fullscreened or not.

--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,7 @@ Changes:
     * clear the urgent flag on window focus
     * new command: list_padding
     * new commands: getenv/setenv/unsetenv
+    * new rule: ewmhnotify
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
