Lots of spelling fixes

--- a/HACKING
+++ b/HACKING
@@ -48,7 +48,7 @@ irc[2].
 Mailing list
 ------------
 The main mailing list for general development, discussion, release
-announcments is:
+announcements is:
 
     herbstluftwm-devel@lists.sourceforge.net
 
