--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ Changes:
     * new rule: ewmhnotify
     * floating, fullscreen, pseudotile: default to toggle if no argument is
       given
+    * add error messages for herbstclient
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
