--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,8 @@ Changes:
     * new command: list_padding
     * new commands: getenv/setenv/unsetenv
     * new rule: ewmhnotify
+    * floating, fullscreen, pseudotile: default to toggle if no argument is
+      given
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
