--- a/AUTHORS
+++ b/AUTHORS
@@ -4,8 +4,8 @@ AUTHORS
 Contributors, sorted by the number of commits in descending order:
 
 Thorsten Wißmann
-Hans-Peter Deifel
 Florian Bruhin
+Hans-Peter Deifel
 Bastien Dejean
 Gabor Adam Toth
 Christoph Egger
@@ -13,6 +13,7 @@ Johannes Schilling
 Steffen Liebergeld
 Georg Reinke
 Christian Dietrich
+Cheer Xiao
 Philipp Erhardt
 Olivier Ramonat
 Corey Richardson
