--- a/NEWS
+++ b/NEWS
@@ -27,7 +27,7 @@ Changes:
     * add error messages for herbstclient
     * new commands: focus_edge, shift_edge
     * new command: shift_to_monitor
-    * optional names for monitors
+    * optional names for monitors, new command rename_monitor
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
