--- a/NEWS
+++ b/NEWS
@@ -26,6 +26,7 @@ Changes:
       given
     * add error messages for herbstclient
     * new command: shift_edge
+    * new command: shift_to_monitor
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
