--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,7 @@ Changes:
     * floating, fullscreen, pseudotile: default to toggle if no argument is
       given
     * add error messages for herbstclient
+    * new command: shift_edge
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
