--- a/HACKING
+++ b/HACKING
@@ -14,8 +14,12 @@ Coding style
 The coding style is similar to the Linux-kernel style with some changes:
 
   - Use 4 spaces instead of tabs.
+  - Do not add any trailing spaces at the end of a line.
   - Data type names are CamelCase
   - Globals must be prefixed with g_
+  - If a function returns success or failure, then encode it in a bool (from
+    stdbool.h). Only use main()-like exit codes (0 = success, non zero =
+    failure) for commands.
   - Always typedef struct, e.g.:
 
     typedef struct {
@@ -39,8 +43,21 @@ always should remove dependency files by running:
 Sending patches
 ---------------
 You can use git to make commits and create patches from them via the command
-git format-patch. You can send those patches to the mailing list[1] or via the
-irc[2].
+git format-patch. Always specify your full name and a valid e-mail address in
+the author field. The commit description must consist two parts, separated by
+an empty line:
+
+  - A mandatory short description in imperative form, e.g.: "Do things in this
+    or that way". The description must not exceed 50 characters.
+  - An optional longer description consisting of full sentences. This is only
+    needed if the commit introduces non-trivial changes.
+
+When introducing new features, always
+
+  - add documentation for it in doc/herbstluftwm.txt (or doc/herbstclient.txt).
+  - document the change (e.g. "new command ...") in the NEWS file.
+
+You can send those patches to the mailing list[1] or via the irc[2].
 
 [1] herbstluftwm-devel@lists.sourceforge.net +
 [2] #herbstluftwm on irc.freenode.net
