Add initial support for rule ids
New char* member in the HSRule struct is added for id. New
property for rule command 'id=' added, to add custom id. New
rules without an explicit id is given an integer id. Adds flag
printid which prints the id of a newly created rule to stdout.

--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,8 @@ Changes:
     * add completion for setenv, getenv and unsetenv
     * the hook consequence now also tells the window id that triggerd the rule
     * new command: echo
+    * rule id: rules can be given ids with the 'id' property. The id
+      can be printed to stdout using the 'printid' flag to the rule command.
 
 Release 0.5.1 on 2013-01-05
 ---------------------------
