Allow unrule command to remove by id

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ Changes:
     * new command: echo
     * rule id: rules can be given ids with the 'id' property. The id
       can be printed to stdout using the 'printid' flag to the rule command.
+      Unrule command accepts ids, and can remove rules individually.
 
 Release 0.5.1 on 2013-01-05
 ---------------------------
