--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Florian Bruhin
 Hans-Peter Deifel
 Bastien Dejean
 Gabor Adam Toth
+Tyler Thomas Hart
 Christoph Egger
 Johannes Schilling
 Steffen Liebergeld
