--- a/NEWS
+++ b/NEWS
@@ -33,6 +33,7 @@ Changes:
     * new command: shift_to_monitor
     * optional names for monitors, new command rename_monitor
     * new consequence: hook
+    * new example script: q3terminal.sh which provides a q3-like terminal
 
 Release: 0.4.1 on 2012-08-30
 ----------------------------
