--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
-Next Release: 0.5
------------------
+Release 0.5.0 on 2012-12-31
+---------------------------
 Incompatible changes:
 
     * The setting focus_follows_shift has been removed. The behaviour now is
