--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
+Next Release
+------------
+Changes:
+
+    * new command: use_previous
+
 Release 0.5.0 on 2012-12-31
 ---------------------------
 Incompatible changes:
