--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Next Release
 Changes:
 
     * new command: use_previous
+    * Makefile: new target: install-nodoc -- install without man/html-docs
 
 Release 0.5.0 on 2012-12-31
 ---------------------------
