Disable focus_follows_mouse in max layout
This disables focus_follows_mouse if other clients (i.e. clients in max
layout) are hidden by that focus change. Then an extra click is
required.

--- a/NEWS
+++ b/NEWS
@@ -6,8 +6,9 @@ Next Release
 
 Changes:
 
-    * disallow focus_follows_mouse between two clients in the same frame in max
-      layout.
+    * disallow focus_follows_mouse if the focus change hides another window
+      (e.g. an pseudotiled window in the max layout). In that case an extra
+      click is required to change the focus.
 
 Release 0.5.1 on 2013-01-05
 ---------------------------
