New command: echo

--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@ Changes:
     * add completion for the rule command
     * add completion for keycombinations in keybind
     * the hook consequence now also tells the window id that triggerd the rule
+    * new command: echo
 
 Release 0.5.1 on 2013-01-05
 ---------------------------
