www: Add FAQ entry for frame_bg_transparent

--- a/www/faq.txt
+++ b/www/faq.txt
@@ -219,3 +219,7 @@ Q: How can I start external panels correctly?::
     kill ${pids[@]}
 } &
 ----
+
+Q: I'm using a compositing manager like xcompmgr and get ugly artifacts when switching tags or splitting frames::
+    You probably have +frame_bg_transparent+ enabled. Disable this setting and
+    use +frame_active_opacity+ and/or +frame_normal_opacity+ instead.
